--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "async": "^3.2.1",
     "async-child-process": "^1.1.1",
+    "noble-bls12-381": "^0.14.1",
     "pnpm": "^6.14.7"
   },
   "devDependencies": {
