--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "aap-on-ethereum",
-  "version": "1.0.0",
-  "description": "",
-  "dependencies": {
-    "async": "^3.2.1",
-    "async-child-process": "^1.1.1",
-    "noble-bls12-381": "^0.14.1",
-    "pnpm": "^6.14.7"
-  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -16,10 +7,27 @@
     "ethers": "^5.4.6",
     "hardhat": "^2.6.2"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dependencies": {
+    "noble-bls12-381": "^0.14.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "name": "aap-on-ethereum",
+  "description": "### Obtaining the source code Check out the source with submodules by running",
+  "version": "1.0.0",
+  "main": "hardhat.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "hardhat test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@gitlab.com/translucence/aap-on-ethereum.git"
+  },
+  "author": "Translucence Research Institute",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/translucence/aap-on-ethereum/issues"
+  },
+  "homepage": "https://gitlab.com/translucence/aap-on-ethereum#readme"
 }
