--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "hardhat": "^2.6.2"
   },
   "dependencies": {
-    "noble-bls12-381": "^0.14.1"
+    "@summa-tx/memview-sol": "^2.0.0",
+    "noble-bls12-381": "^0.14.1",
+    "async": "^3.2.1",
+    "async-child-process":"^1.1.1"
   },
   "name": "aap-on-ethereum",
   "description": "### Obtaining the source code Check out the source with submodules by running",
