--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
-    "hardhat": "^2.6.2"
+    "hardhat": "^2.6.2",
+    "hardhat-shorthand": "^1.0.0"
   },
   "dependencies": {
     "@summa-tx/memview-sol": "^2.0.0",
-    "noble-bls12-381": "^0.14.1",
     "async": "^3.2.1",
-    "async-child-process":"^1.1.1"
+    "async-child-process": "^1.1.1",
+    "noble-bls12-381": "^0.14.1"
   },
   "name": "aap-on-ethereum",
   "description": "### Obtaining the source code Check out the source with submodules by running",
