--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
     "hardhat": "^2.6.2",
-    "hardhat-shorthand": "^1.0.0"
+    "hardhat-shorthand": "^1.0.0",
+    "prettier": "^2.3.2"
   },
   "dependencies": {
     "@summa-tx/memview-sol": "^2.0.0",
