--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,12 +16,15 @@ serde_json = "1.0.67"
 bincode = "1.3.3"
 ark-serialize = "0.3.0"
 ark-ff = "0.3.0"
+ark-ec = "0.3.0"
 hex = "0.4.3"
-ark-bls12-381 = "0.3.0"
 tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
 rand = "0.8.4"
 serde = { version = "1.0.124", features = ["derive"] }
 anyhow = "1.0.39"
+ark-bn254 = "0.3.0"
+num-traits = "0.2.14"
+num-derive = "0.3.3"
 
 [dev-dependencies]
 proptest = "1.0.0"
