--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,9 +8,9 @@ doctest = false
 
 [dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
-jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "d396f15d44747bec55ad7f898647675326f6bbdd" } # latest
-jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "d396f15d44747bec55ad7f898647675326f6bbdd" } # latest
-itertools = "0.10.1" # needed for jf-txn rev="55080e9073d9b9dbd8b8a9e6d7bc2dd23014412a" to compile
+jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
+jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
+itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
 serde_json = "1.0.67"
 bincode = "1.3.3"
