[#30] Local arbitrum dev chain
- Run dummy verifier against arbitrum test node
- Add arbitrum submodule with small fixes

This dev node is used by arbitrum in their CI but it is undocumented and
not officially supported.

fix submodule commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 node_modules
 artifacts
 cache
-/.pre-commit-config.yaml
 .env
+
+# prevent our formatters from formatting submodule repos
+arbitrum/
