Deploy Dummy Verifier to Rinkeby.

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,3 @@
-ARBITRUM_MNEMONIC="test test test test test test test test test test test junk"
+RINKEBY_MNEMONIC="test test test test test test test test test test test junk"
+TEST_MNEMONIC="test test test test test test test test test test test junk"
+RINKEBY_URL="https://rinkeby.infura.io/v3/<project_id>"
