--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@summa-tx/memview-sol": "^2.0.0",
     "async": "^3.2.1",
     "async-child-process": "^1.1.1",
-    "noble-bls12-381": "^0.14.1"
+    "noble-bls12-381": "^0.14.1",
+    "random-seed": "^0.3.0"
   },
   "name": "aap-on-ethereum",
   "description": "### Obtaining the source code Check out the source with submodules by running",
