treefmt does not format js and solitidy files
Add flag to write the reformatted files

Suggest merging this and running it once we have no PR with changes to
solidity or javascript files open to avoid merge conflicts.

Closes !22.

--- a/treefmt.toml
+++ b/treefmt.toml
@@ -18,8 +18,10 @@ includes = [
 
 [formatter.javascript]
 command = "prettier"
+options = ["-w"]
 includes = ["**/*.js"]
 
 [formatter.solidity]
 command = "prettier"
+options = ["-w"]
 includes = ["**/*.sol"]
