--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ doctest = false
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
 jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
+zerok_lib = { git = "ssh://git@gitlab.com/translucence/systems/system.git", rev = "cb3d74f565bd4695a44a3bd7d92070e0b998bf44"  } # TODO change with git path
 itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
 serde_json = "1.0.67"
@@ -25,6 +26,7 @@ anyhow = "1.0.39"
 ark-bn254 = "0.3.0"
 num-traits = "0.2.14"
 num-derive = "0.3.3"
+rand_chacha = "0.3.1"
 
 [dev-dependencies]
 proptest = "1.0.0"
