--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,9 +8,15 @@ doctest = false
 
 [dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
-jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
-jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
-zerok_lib = { git = "ssh://git@gitlab.com/translucence/systems/system.git", rev = "cb3d74f565bd4695a44a3bd7d92070e0b998bf44"  } # TODO change with git path
+
+jf-txn.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
+jf-txn.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"
+jf-utils.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
+jf-utils.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"
+
+zerok_lib.git = "ssh://git@gitlab.com/translucence/systems/system.git"
+zerok_lib.rev = "cb3d74f565bd4695a44a3bd7d92070e0b998bf44"
+
 itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
 serde_json = "1.0.67"
