--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -33,6 +33,7 @@ ark-bn254 = "0.3.0"
 num-traits = "0.2.14"
 num-derive = "0.3.3"
 rand_chacha = "0.3.1"
+hex-literal = "0.3.1"
 
 [dev-dependencies]
 proptest = "1.0.0"
