--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "async": "^3.2.1",
     "async-child-process": "^1.1.1",
     "noble-bls12-381": "^0.14.1",
-    "random-seed": "^0.3.0"
+    "random-seed": "^0.3.0",
+    "solidity-bytes-utils": "^0.8.0"
   },
   "name": "aap-on-ethereum",
   "description": "### Obtaining the source code Check out the source with submodules by running",
