--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -34,6 +34,7 @@ num-traits = "0.2.14"
 num-derive = "0.3.3"
 rand_chacha = "0.3.1"
 hex-literal = "0.3.1"
+byteorder = "1.4.3"
 
 [dev-dependencies]
 proptest = "1.0.0"
