--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -35,6 +35,7 @@ num-derive = "0.3.3"
 rand_chacha = "0.3.1"
 hex-literal = "0.3.1"
 byteorder = "1.4.3"
+blake2 = "0.9.1"
 
 [dev-dependencies]
 proptest = "1.0.0"
