Solidity blake2 results wrong if input > 128 bytes
Disable branch tags to reduce input size to 128 bytes.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,7 +15,7 @@ jf-utils.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
 jf-utils.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"
 
 zerok_lib.git = "ssh://git@gitlab.com/translucence/systems/system.git"
-zerok_lib.rev = "cb3d74f565bd4695a44a3bd7d92070e0b998bf44"
+zerok_lib.rev = "cfc5d7a8b09adcfee1134153fe658587b3c7cdbd" # disable branch tags in branch hash
 
 itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
