Use zerok_lib with keccak256 nullifier hash
Compiles, hash tests fail because solidity is still using blake2.

The smart contract needs to be simplified because we now have a 32-byte
hash function output size (and therefore tree height).

If this is not desirable and we would like to try with 64-byte / 512
tree height first we could somehow stretch the output of the keccak hash
function instead.

These tests currently fail

failures:
    nullifiers_merkle_tree::tests::test_blake2b_branch
    nullifiers_merkle_tree::tests::test_blake2b_elem
    nullifiers_merkle_tree::tests::test_blake2b_leaf
    nullifiers_merkle_tree::tests::test_terminal_node_value_empty

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,14 +10,18 @@ doctest = false
 ethers.git = "https://github.com/gakonst/ethers-rs"
 ethers.rev = "071a41605ba2a9bffbf618921534ba5e0121f9d8"
 # ethers.rev = "fb4d9a9ef1cc9df340023d61a6885693a6a6fcf5" # NOTE: breaks compiliation
-
 jf-txn.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
 jf-txn.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"
 jf-utils.git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git"
 jf-utils.rev = "6c88a961f6ad142501e577d91dbf39f5c58bc1f6"
 
 zerok_lib.git = "ssh://git@gitlab.com/translucence/systems/system.git"
-zerok_lib.rev = "cfc5d7a8b09adcfee1134153fe658587b3c7cdbd" # disable branch tags in branch hash
+zerok_lib.rev = "1a76733a1397390065cd13243e035f4249fc17b5" # use keccak256 hash function
+
+# TODO: remove
+# keeping this here because will likely require more hacking
+# [patch."ssh://git@gitlab.com/translucence/systems/system.git"]
+# zerok_lib = { path = "../../system/zerok/zerok_lib" }
 
 itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
@@ -38,6 +42,7 @@ rand_chacha = "0.3.1"
 hex-literal = "0.3.1"
 byteorder = "1.4.3"
 blake2 = "0.9.1"
+tiny-keccak = { version = "2.0.2", features = ["keccak"] }
 
 [dev-dependencies]
 proptest = "1.0.0"
