--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = ""
 authors = ["Translucence Research Institute"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "=3.9"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
 hdwallet = "^1.3.2"
 ipython = "^7.28.0"
+eth-brownie = "^1.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
