--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 doctest = false
 
 [dependencies]
-ethers = { git = "https://github.com/gakonst/ethers-rs" }
+ethers.git = "https://github.com/gakonst/ethers-rs"
+
 jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 zerok_lib = { git = "ssh://git@gitlab.com/translucence/systems/system.git", rev = "cb3d74f565bd4695a44a3bd7d92070e0b998bf44"  } # TODO change with git path
