Solidity version of fiat shamir transcripts
Solidity versions of:

    - from_le_bytes_mod_order
    - append_message
    - append_challenge
    - get_and_append_challenge
    - append_commitment
    - append_commitments

- Test for g1 negation
- Test to compare evm and arkworks y sign check
- Convenience script to run all CI steps locally.

Ethers now uses `ethers::prelude::Bytes` instead `Vec<u8>` as a type to
represent bytes.

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -13,6 +13,7 @@ compiler:
     remappings:
       - "hardhat=node_modules/hardhat"
       - "@openzeppelin=node_modules/@openzeppelin"
+      - "solidity-bytes-utils=node_modules/solidity-bytes-utils"
 
 networks:
   default: hardhat
