--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ test:
     - nix-shell --run make-doc
     - nix-shell --run lint-ci
     - nix-shell --run cape-test-geth
+    - nix-shell --run "brownie test --network hardhat"
   artifacts:
     paths:
       - doc
