--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,9 +14,14 @@ jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev =
 jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
 jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
 jf-primitives = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
+
+# Pin to branch cape-transcript-public with exposed transcript methods
+jf-plonk = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "3dea8d7f5b2e6ebb29a66dc39b686e5f0eb19efe" }
+
 zerok_lib = { git = "ssh://git@gitlab.com/translucence/systems/system.git", rev="0c5be1a57f007e48f6380eebcd49220b6ff26a82" }
 
 itertools = "0.10.1" # needed for jf-txn to compile
+
 ark-std = "0.3.0"
 serde_json = "1.0.67"
 bincode = "1.3.3"
@@ -39,6 +44,12 @@ sha3 = "0.9.1"
 async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
 futures = "0.3.16"
+
+# copied from jellyfish
+[dependencies.ark-poly-commit]
+git = "https://github.com/arkworks-rs/poly-commit/"
+rev = "cafc05e39692bbc5c383990063ad851f0b94a553"
+default-features = false
 
 [dev-dependencies]
 proptest = "1.0.0"
