* Compute USD cost directly from the balances of users. * Gorli configuration (environement variables and hardhat.config.js)

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 RINKEBY_MNEMONIC="test test test test test test test test test test test junk"
-TEST_MNEMONIC="test test test test test test test test test test test junk"
 RINKEBY_URL="https://rinkeby.infura.io/v3/<project_id>"
+
+GORLI_MNEMONIC="test test test test test test test test test test test junk"
+GORLI_URL="https://goerli.infura.io/v3/<project_id>"
+
+TEST_MNEMONIC="test test test test test test test test test test test junk"
