Brownie doesn't find openzeppelin contract
Add remappings for openzeppelin contract

Having to add remappings for every contract is far from ideal.

As alternative we could also install the contracts with brownies package
manager but I would rather go the other direction and use the artifacts
from hardhat like we're doing for the rust tests. I don't think this is
currently possible though without making modifications to brownie.

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -9,9 +9,11 @@ compiler:
             enabled: true
             runs: ${SOLC_OPTIMIZER_RUNS}
 
-        # To find hardhat's console.log
+        # Enable brownie to find installed contracts
         remappings:
-          - hardhat=node_modules/hardhat/
+          - "hardhat=node_modules/hardhat"
+          - "@openzeppelin=node_modules/@openzeppelin"
+
 networks:
     default: hardhat
     development:
