--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,6 +11,8 @@ ethers.git = "https://github.com/gakonst/ethers-rs"
 
 jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
+jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
+
 
 itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
@@ -19,6 +21,8 @@ bincode = "1.3.3"
 ark-serialize = "0.3.0"
 ark-ff = "0.3.0"
 ark-ec = "0.3.0"
+ark-ed-on-bn254 = { version = "0.3.0", default-features = false }
+
 hex = "0.4.3"
 tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
 rand = "0.8.4"
