Records Merkle Tree.  * Read the frontier.  * Create the tree structure.  * Recompute the root hash and check against the root inside the contract.  * Check the frontier corresponds to the right position in the tree.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,7 +12,7 @@ ethers.git = "https://github.com/gakonst/ethers-rs"
 jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
-
+jf-primitives = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
 
 itertools = "0.10.1" # needed for jf-txn to compile
 ark-std = "0.3.0"
