--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aap-on-ethereum"
+name = "cap-on-ethereum"
 version = "0.1.0"
 description = ""
 authors = ["Translucence Research Institute"]
