--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,5 @@ test:
     - docker
   image: lnl7/nix
   script:
+    - nix-shell --run "pnpm i && lint-solidity"
     - nix-shell --run aape-test-geth
