--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "hardhat-shorthand": "^1.0.0",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
-    "solhint": "^3.3.6"
+    "solc-0.8": "npm:solc@^0.8.0",
+    "solhint": "^3.3.6",
+    "solidity-docgen": "^0.5.16"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
