--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
+    "ganache-cli": "^6.12.2",
     "hardhat": "^2.6.4",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-shorthand": "^1.0.0",
