--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -35,3 +35,6 @@ rand_chacha = "0.3.1"
 
 [dev-dependencies]
 proptest = "1.0.0"
+
+[build-dependencies]
+ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs" }
