--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
   "devDependencies": {
+    "@codechecks/client": "^0.1.12",
+    "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/bytes": "^5.5.0",
+    "@ethersproject/providers": "^5.5.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "8.0.2",
+    "@typechain/hardhat": "^3.0.0",
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.7",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.7",
-    "hardhat": "^2.6.4",
+    "ethers": "^5.5.1",
+    "hardhat": "^2.6.8",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-shorthand": "^1.0.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.4.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.18",
-    "solc-0.8": "npm:solc@^0.8.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solc-0.8": "npm:solc@^0.8.10",
     "solhint": "^3.3.6",
-    "solidity-docgen": "^0.5.16"
+    "solidity-docgen": "^0.5.16",
+    "ts-node": "^10.4.0",
+    "typechain": "^6.0.2",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.2",
+    "@noble/bls12-381": "^1.0.1",
+    "@openzeppelin/contracts": "^4.3.3",
     "@summa-tx/memview-sol": "^2.0.0",
-    "async": "^3.2.1",
+    "async": "^3.2.2",
     "async-child-process": "^1.1.1",
     "js-big-decimal": "^1.3.4",
-    "noble-bls12-381": "^0.14.1",
     "random-seed": "^0.3.0"
   },
   "name": "cap-on-ethereum",
