--- a/treefmt.toml
+++ b/treefmt.toml
@@ -17,7 +17,10 @@ includes = [
 [formatter.javascript]
 command = "prettier"
 options = ["-w"]
-includes = ["**/*.js"]
+includes = [
+  "**/*.js",
+  "**/*.ts",
+]
 
 [formatter.solidity]
 command = "prettier"
