--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,15 @@
 {
+  "plugins": [
+    "node_modules/prettier-plugin-solidity"
+  ],
   "overrides": [
     {
       "files": "**.sol",
       "options": {
-        "printWidth": 99,
-        "tabWidth": 2,
+        "printWidth": 80,
+        "tabWidth": 4,
         "useTabs": false,
-        "singleQuote": true,
+        "singleQuote": false,
         "bracketSpacing": false
       }
     },
@@ -16,7 +19,7 @@
         "printWidth": 99,
         "tabWidth": 2,
         "semi": true,
-        "singleQuote": true,
+        "singleQuote": false,
         "useTabs": false,
         "endOfLine": "auto"
       }
