--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {
-      "@typechain-types": ["typechain-types/index"]
-    }
+    "baseUrl": "."
   },
-  "include": ["./scripts", "./test"],
+  "include": ["./scripts", "./test", "./typechain-types"],
   "files": ["./hardhat.config.ts"]
 }
