--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ test:
     - docker
   image: lnl7/nix
   script:
-    - nix-shell --run "lint-solidity"
+    - nix-shell --run lint-ci
     - nix-shell --run cape-test-geth
     - nix-shell --run "solidity-docgen --solc-module solc-0.8 -o ./doc/contracts"
   artifacts:
