--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ test:
     - docker
   image: lnl7/nix
   script:
+    - nix-shell --run make-doc
     - nix-shell --run lint-ci
     - nix-shell --run cape-test-geth
-    - nix-shell --run "solidity-docgen --solc-module solc-0.8 -o ./doc/contracts"
   artifacts:
     paths:
       - doc
