--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
     "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-preprocessor": "^0.1.4",
     "hardhat-shorthand": "^1.0.0",
     "lodash": "^4.17.21",
     "prettier": "^2.4.1",
