--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
+    "hardhat-docgen": "^1.2.0",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-preprocessor": "^0.1.4",
     "hardhat-shorthand": "^1.0.0",
