--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -8,6 +8,6 @@
     "outDir": "dist",
     "baseUrl": "."
   },
-  "include": ["./scripts", "./test", "./typechain-types"],
+  "include": ["./scripts", "./test", "./typechain-types", "./deploy"],
   "files": ["./hardhat.config.ts"]
 }
