--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Linting
         run: nix-shell --run "prepend-timestamps lint-ci"
 
+      - name: Run Clippy
+        run: nix-shell --run "cargo clippy --workspace"
+
       - name: Run Tests
         run: nix-shell --run "prepend-timestamps cape-test-geth"
 
