--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -7,21 +7,15 @@ edition = "2018"
 doctest = false
 
 [dependencies]
-ethers.git = "https://github.com/gakonst/ethers-rs"
-ethers.rev = "4c677933ce4407fb1307f9077aefc31b9e811cdb"
-
 jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
 jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
 jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
 jf-primitives = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "4d7e1c38e3f41d83e5b93f0eca1ae0663f221a5e" }
-
 # Pin to branch cape-transcript-public with exposed transcript methods
 jf-plonk = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git", rev = "3dea8d7f5b2e6ebb29a66dc39b686e5f0eb19efe" }
-
 zerok_lib = { git = "ssh://git@gitlab.com/translucence/systems/system.git", rev="0c5be1a57f007e48f6380eebcd49220b6ff26a82" }
-
+ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
 itertools = "0.10.1" # needed for jf-txn to compile
-
 ark-std = "0.3.0"
 serde_json = "1.0.67"
 bincode = "1.3.3"
@@ -29,7 +23,6 @@ ark-serialize = "0.3.0"
 ark-ff = "0.3.0"
 ark-ec = "0.3.0"
 ark-ed-on-bn254 = { version = "0.3.0", default-features = false }
-
 hex = "0.4.3"
 tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
 rand = "0.8.4"
