--- a/doc/workflow/Cargo.toml
+++ b/doc/workflow/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-jf-txn = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
-jf-utils = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
-jf-rescue = { git = "ssh://git@gitlab.com/translucence/crypto/jellyfish.git" } # latest
+jf-aap = { git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" } # latest
+jf-utils = { git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" } # latest
+jf-rescue = { git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git" } # latest
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
 
 serde_json = "1.0.67"
