--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -6,3 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
+atomic_store = { version="0.0.2", registry="translucence" }
+bincode = "1.3.3"
+dirs = "4.0"
+# may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
+ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+jf-aap = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", rev = "529a2e41b06d39144885c8482b7c230143567d10"}
+jf-primitives = { features=["std"], git = "ssh://git@github.com/SpectrumXYZ/jellyfish.git", rev = "529a2e41b06d39144885c8482b7c230143567d10"}
+serde = { version = "1.0.123", features = ["derive", "rc"] }
+serde_derive = "1.0.118"
+serde_json = "1.0.61"
+structopt = { version = "0.3" }
+tide = "0.16.0"
+tide-websockets = "0.4.0"
+toml = "0.5"
+tracing = "0.1.26"
+tracing-subscriber = "0.3"
