Flake.nix development environment
- Add nix command to dev shell, update README
- Fix dev env for aarch64-darwin

Close #37

--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,8 @@
 use nix
+watch_file flake.nix
+watch_file flake.lock
+watch_dir nix
+
 watch_file .env
 watch_file poetry.lock
 watch_file pnpm-lock.yaml
-watch_dir nix
